# Django-SocialWeb

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt  ~$nalTerm - Report.docx
api/: api.py  serializers.py  tests.py  urls.py
chat/: consumers.py  models.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_rename_room_chatmessage_space.py
chat/templates/chat/: chat_home.html  create.html  join.html  room.html
friends/: models.py  urls.py  views.py
friends/migrations/: 0001_initial.py
friends/templates/friends/: friend_home.html
socialapp/: admin.py  forms.py  models.py  urls.py  views.py
socialapp/migrations/: 0001_initial.py  0002_alter_profile_image_post.py  0002_appuser.py  0003_alter_post_image_alter_post_owner_alter_post_text.py  0003_delete_appuser.py
socialapp/templates/: index.html
socialapp/templates/socialapp/: base.html  base_auth.html  home.html  index.html  login.html  nav.html  post_delete.html  post_list.html  post_update.html  profile.html  profile_create.html  profile_update.html  signup.html  simplelogin.html
socialapp/templates/socialapp/base/: base_auth.html  base_normal.html
socialapp/templates/socialapp/partials/: navbar.html  sidebar.html
socialapp/templates/socialapp/to_eliminate/: post_list.html  post_view.html
socialweb/: asgi.py  routing.py  settings.py  urls.py
