[tool.poetry]
name = "django social network"
version = "0.1.0"
description = "Social networking application in Django"
authors = ["MAhmadAzhar <mahmadazhar@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1.4"
djangorestframework = "3.14.0"
django-extensions = "3.2.1"
django-countries = "^7.5"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
