[tool.poetry]
name = "django social network"
version = "0.1.0"
description = "Social networking application in Django"
authors = ["MAhmadAzhar <mahmadazhar@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1.4"
djangorestframework = "3.14.0"
django-extensions = "3.2.1"
django-countries = "^7.5"
django-browser-reload = "^1.6.0"
django-crispy-forms = "^1.14.0"
crispy-tailwind = "^0.5.0"
pillow = "^9.4.0"
django-truncate = "^0.1"
channels = "4.0.0"
channels-redis = "^4.0.0"
asgiref = "3.6.0"
daphne = "4.0.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
